crates/bamltype/tests/ui/serde_json_value.rs
use bamltype::BamlType;

#[BamlType]
struct Bad {
    value: serde_json::Value,
}

fn main() {}
